Fixed broken spacing on footer.

--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,7 @@ a:visited {
 #approach p {
   font-size: 18px;
   padding: 0 50px 0 50px;
+  line-height: 1.8;
 }
 
 .blue-gap {
@@ -350,6 +351,10 @@ a:visited {
 #cta img {
   width: 140px;
   padding-bottom: 50px;
+}
+
+#cta h3 {
+  font-size: 32px;
 }
 
 .square-button a {
@@ -614,6 +619,7 @@ footer .left {
   height: 60px;
   float: left;
   padding-left: 50px;
+  padding-top: 4px;
 }
 
 footer .right {
